# spin-trigger-remote

./: .gitignore  Cargo.toml  install-plugin.sh  spin-pluginify.toml
examples/remote-app/: Cargo.toml  spin.toml
examples/remote-app/src/: lib.rs
examples/remote-app/wit/: example.wit
src/: lib.rs  main.rs
